# visioplot

./: .gitignore  LICENSE  README.md  main.py  publish.py  pyproject.toml  release_and_push.py
.github/workflows/: publish.yaml
tests/: modify_lines.py
tools/: export_visconst.py  get_visconst.py  publish.py
visioplot/: __init__.py  constants.py  debug_utils.py  matplotlib_patch.py  matplotlib_utils.py  parse_utils.py  parser.py  svg_exporter.py  svg_utils.py  svglib.py  visio_app.py  visio_exporter.py  visioapp.py  visiolib.py
