[project]
name = "visioplot"
version = "1.0.0"
description = "Common tool packaging"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "jchl" },
  { name = "riverflows2333" },
]

license = { file = "LICENSE" }

dependencies = [
  "numpy",
  "matplotlib",
  "lxml",
  "beautifulsoup4",
  "pywin32; sys_platform == 'win32'",
  "matplotlib-inline",
  "ipython",
  "gurobipy",
]

[project.urls]
Homepage = "https://github.com/jchliao/visioplot"
Repository = "https://github.com/jchliao/visioplot"

# CLI（如未来需要）
# [project.scripts]
# visioplot = "visioplot.cli:main"

[dependency-groups]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
