[project]
name = "visioplot"
version = "1.2.1"
description = "Matplotlib to editable SVG and Visio (VSDX) export toolkit"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "jchl" },
    { name = "riverflows2333" },
]

keywords = [
    "matplotlib",
    "visio",
    "vsdx",
    "svg",
    "vector-graphics",
    "export",
    "academic-plotting",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Framework :: Matplotlib",
]

license = { file = "LICENSE" }

dependencies = [
    "matplotlib",
    "lxml",
    "beautifulsoup4",
    "pywin32; sys_platform == 'win32'",
    "matplotlib-inline",
]

[project.urls]
Homepage = "https://github.com/jchliao/visioplot"
Repository = "https://github.com/jchliao/visioplot"
Issues = "https://github.com/jchliao/visioplot/issues"

# CLI（如未来需要）
# [project.scripts]
# visioplot = "visioplot.cli:main"

[dependency-groups]
dev = [
    "numpy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"